# bugreport

./: Cargo.toml  README.md  build.rs  example-report.md
.github/workflows/: ci.yml
examples/: custom_collector.rs  readme.rs  simple.rs
src/: collector.rs  collectors.rs  helper.rs  lib.rs  report.rs
src/collector/: directory_entries.rs
src/format/: markdown.rs  mod.rs  plaintext.rs
test-crates/: README.md  run-all-tests.sh
test-crates/bugreport-client-with-git-hash-feature/: Cargo.toml
test-crates/bugreport-client-with-git-hash-feature/src/: main.rs
test-crates/bugreport-client-with-git-hash-feature/tests/: integration_tests.rs
test-crates/bugreport-client-without-git-hash-feature/: Cargo.toml
test-crates/bugreport-client-without-git-hash-feature/tests/: integration_tests.rs
test-crates/bugreport-test-crate-utils/: Cargo.toml
test-crates/bugreport-test-crate-utils/src/: lib.rs
tests/: test_collector_directory_entries.rs
