[package]
name = "bugreport"
description = "Collect system and environment information for bug reports"
categories = ["command-line-interface"]
homepage = "https://github.com/sharkdp/bugreport"
repository = "https://github.com/sharkdp/bugreport"
keywords = [
    "bugreport",
    "diagnostics",
    "cross-platform",
    "cli",
    "terminal"
]
license = "MIT/Apache-2.0"
authors = ["David Peter <mail@david-peter.de>"]
edition = "2018"
version = "0.2.1"

[dependencies]
sys-info = "0.7"
snailquote = "0.3"
