[package]
name = "bugreport"
description = "Collect system and environment information for bug reports"
categories = ["command-line-interface"]
homepage = "https://github.com/sharkdp/bugreport"
repository = "https://github.com/sharkdp/bugreport"
keywords = [
    "bugreport",
    "diagnostics",
    "cross-platform",
    "cli",
    "terminal"
]
license = "MIT/Apache-2.0"
authors = ["David Peter <mail@david-peter.de>"]
edition = "2018"
version = "0.3.0"

[features]
default = ["collector_operating_system", "format_markdown"]

collector_operating_system = ["sys-info"]

format_markdown = []
format_plaintext = []

[dependencies]
sys-info = { version = "0.7", optional = true }
snailquote = "0.3"
